# llm-ethics-benchmark

./: .gitignore  AGENTS.md  CITATION.bib  CITATION.cff  CLAUDE.md  Makefile  README.md  check_slurm_runs.py  compare_quant_pairs.py  constraints-tested.txt  fyp_cli.py  generate_slurm_jobs.py  package-lock.json  package.json  pyproject.toml  requirements-dashboard.txt  requirements.txt  run_benchmark.py  run_quant_benchmark.py  run_quant_matrix.py  submit_slurm_jobs.py  todo.md
.claude/: launch.json
.codex/: config.toml  hooks.json
.hallmark/: log.json
.streamlit/: config.toml
.understand-anything/: .understandignore  atlas-data.json  atlas.html  fingerprints.json  meta.json
configs/: artifact_policy.yaml  claim_surfaces.yaml  default.yaml  tc1.yaml  tc1_512.yaml  tc1_int8.yaml  tc1_int8_512.yaml  tc1_sensitivity.yaml  tc1_sensitivity_512.yaml
dashboard/: __init__.py  app.py  data.py  theme.py
docs/: AGENTIC_WORKFLOW.md  AGENT_DASHBOARD.md  Agentic_AI_Workflow_Report_2026-06-26.docx  CODEX_MEETUP_BRIEF.md  Codex_Meetup_Agent_Harness_Report.docx  Codex_Meetup_Agent_Harness_Report.html  FYP_Agent_Harness_Architecture_Guide_2026-06-09.docx  FYP_Interim_2026-07-10.docx  FYP_Interim_2026-07-10_humanized.docx  FYP_REPO_GUIDE.md  FYP_Report_2026-05-24.docx  FYP_Report_2026-05-27.docx  FYP_Report_2026-06-14.docx  FYP_Report_2026-06-26_v3.docx  FYP_Report_2026-07-01_humanized.docx  FYP_Report_2026-07-01_v5.docx  FYP_Thesis_2026-06-18.docx  FYP_Thesis_2026-06-26_v2.docx  FYP_Thesis_2026-06-26_v3.docx  FYP_Thesis_2026-07-02_humanized.docx  FYP_Thesis_2026-07-02_v4.docx  (+39 more)
(+856 files in other folders)
